    * Show number of rows and number of selected rows in header line
      (also for WATO hosts table)
    * FIX: fix problem in showing exceptions (due to help function)
    * FIX: fixed several localization problems in view/command processing
    * FIX: fixed duplicated settings in WATO when using localisation
    * FIX: fixed exception when refering to a language which does not exist

    WATO: 
    * Main menu of ruleeditor (Host & Service Parameters) now has
      a topic for "Used rules" - a short overview of all non-empty
      rulesets.
    * FIX: add missing context help to host details dialog
    * FIX: set new site dirty is host move due to change of
      folder attributes
    * FIX: fix exception on unknown value in DropdownChoice
    * FIX: add service specification to ruleset Delay service notifications
    * FIX: fixed problem with disabled sites in WATO
    * FIX: massive speedup when changing roles/users and activing changes
      (especially when you have a larger number of users and folders)
    * Add variable CONTACTPAGER to allowed macros in notifications

    BI:
    * New iterators FOREACH_CHILD and FOREACH_PARENT
    * FIX: fix handling of FOREACH_ in leaf nodes (remove hard coded
      $HOST$, replace with $1$, $2$, ..., apply argument substitution)
    * New logical datatable for aggregations that have the same name
      as a host. Converted view "BI Boxes" to this new table. This allows
      for Host-Aggregations containing data of other hosts as well.
    * count_ok: allow percentages, e.g. "count_ok!70%!50%"

1.2.0p1:
    Core:
    * Added macros $DATE$, $SHORTDATETIME$ and $LONGDATETIME$' to
      notification macros

    Checks & Agents:
    * FIX: diskstat: handle output 'No Devices Found' - avoiding exception
    * 3ware_units: Following states now lead to WARNING state instead of
      CRITICAL: "VERIFY-PAUSED", "VERIFYING", "REBUILDING"
    * New checks tsm_stagingpools, tsm_drive and tsm_storagepools
      Linux/UNIX