@@ -1,11 +1,14 @@
 Title: Remove all downtimes does not work
 Component: multisite
-State: open
+Class: bug
+State: done
 Date: 2012-06-08 16:02:53
 Targetversion: 1.2.0
-Class: bug
 
 The button "Remove all downtimes" in the host/services
 commands dialog is not yet implemented. One can remove 
 downtimes in the downtimes table - but nicer would be
 to do it here - or remove the button.
+
+2012-07-03 13:18:33: changed state open -> done
+Has been fixed before
