@@ -850,8 +850,8 @@ class html:
         if self.req.header_sent:
             self.bottom_focuscode()
             corner_text = ""
-            if self.browser_reload:
-                corner_text += _("refresh: %s secs") % self.browser_reload
+            corner_text += '<div id=foot_refresh>%s</div>' % \
+                    _("refresh: <div id=foot_refresh_time>%s</div> secs") % self.browser_reload
             if self.render_headfoot:
                 si = self.render_status_icons()
                 self.write("<table class=footer><tr>"
